[gd_scene load_steps=32 format=4 uid="uid://vtcwaa3kg45e"]

[ext_resource type="Texture2D" uid="uid://ldhyqbq7h1fq" path="res://Farm RPG FREE 16x16 - Tiny Asset Pack/Objects/Interior.png" id="1_bg37v"]
[ext_resource type="Script" uid="uid://c0nhswjo1o06x" path="res://Scripts/HouseMain.gd" id="1_nssql"]
[ext_resource type="Texture2D" uid="uid://dr58g0hljneaj" path="res://Farm RPG FREE 16x16 - Tiny Asset Pack/Objects/House.png" id="2_cy6o3"]
[ext_resource type="Texture2D" uid="uid://c6j0tgaa5m5qd" path="res://images/Floor.png" id="3_mkprd"]
[ext_resource type="Script" uid="uid://dfy4y4vmh0p43" path="res://Scripts/Character_Movment.gd" id="4_1q7ox"]
[ext_resource type="Texture2D" uid="uid://bobbqh1d7bdxp" path="res://images/Floor_Border_Two.png" id="4_tjhet"]
[ext_resource type="Texture2D" uid="uid://5kltq0lvpn5h" path="res://images/Floor_border.png" id="5_1tsjo"]
[ext_resource type="Texture2D" uid="uid://expaujjo2g2p" path="res://images/Character/Left.png" id="5_tjhet"]
[ext_resource type="Script" uid="uid://dho7ukjmxhg37" path="res://Scripts/dialog.gd" id="6_1tsjo"]
[ext_resource type="Texture2D" uid="uid://b5ibc7ft071rj" path="res://images/Wall.png" id="6_neyu1"]
[ext_resource type="Texture2D" uid="uid://bpbefxlrt6a3j" path="res://images/Dialog.png" id="7_neyu1"]
[ext_resource type="Texture2D" uid="uid://id3wc4wec81g" path="res://images/Border.png" id="7_tjhet"]
[ext_resource type="Texture2D" uid="uid://dknbeg1g3630s" path="res://images/House_FootThing.png" id="8_1tsjo"]
[ext_resource type="FontFile" uid="uid://bjvw74d2y0xri" path="res://PixelifySans-VariableFont_wght.ttf" id="8_nssql"]
[ext_resource type="FontFile" uid="uid://c7b0xfynm2exo" path="res://Bytesized-Regular.ttf" id="9_y0ty6"]
[ext_resource type="Texture2D" uid="uid://kpylmm72f8w0" path="res://Monfera's/08w6e7lcsc-1.png" id="10_sc4v1"]
[ext_resource type="Texture2D" uid="uid://du6iekjewnk48" path="res://images/Dialog_Menu.png" id="11_ct606"]
[ext_resource type="AudioStream" uid="uid://caigueqvco65f" path="res://sound/Main_theme_song.mp3" id="17_neyu1"]
[ext_resource type="Script" uid="uid://c13kr8kljno6h" path="res://Scripts/area_2d.gd" id="19_y0ty6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2sxi3"]
texture = ExtResource("1_bg37v")
0:0/0 = 0
0:0/0/z_index = 1
1:0/0 = 0
2:0/0 = 0
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0, -0.4496479, 0, -0.62950706, 8, 8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.17985725, 0.26978683, 0.5395756, 0.62950516, 8, -8, 8)
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.8093643, -8, -0.9892235, 8, 8, 8, 8, -8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.8093643, -8, 0.9892235, 8, -8, 8, -8, -8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-0.62950706, -8, -0.9892235, 0.5395756, -0.26978874, 1.4388695, 2.9676685, 1.4388695, 4.0468197, 0, 8, -0.8992939, 8, -8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.62950706, -8, 0.9892235, 0.5395756, 0.26978874, 1.4388695, -2.9676685, 1.4388695, -4.0468197, 0, -8, -0.8992939, -8, -8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
2:7/0/z_index = -1
3:7/0 = 0
3:7/0/z_index = -1
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.5395756, 8, 0.17985725, 8, 8, -8, 8)
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
2:8/0/z_index = -1
3:8/0 = 0
3:8/0/z_index = -1
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.564844, -8, -6.205127, -0.5395775, 6.205126, -0.17985916, 8, -8)
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:4/0 = 0
12:4/0 = 0
11:5/0 = 0
12:5/0 = 0
11:3/0 = 0
12:3/0 = 0
12:2/0 = 0
12:1/0 = 0
11:1/0 = 0
11:2/0 = 0
10:1/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
10:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_afyft"]
texture = ExtResource("2_cy6o3")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
11:6/0 = 0
12:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4uu3l"]
texture = ExtResource("3_mkprd")
0:0/0 = 0
0:0/0/z_index = -2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nssql"]
texture = ExtResource("4_tjhet")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y0ty6"]
texture = ExtResource("5_1tsjo")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sc4v1"]
texture = ExtResource("6_neyu1")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1tsjo"]
texture = ExtResource("7_tjhet")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, -4.2266808, 8, -4.0468216, -8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, -4.0468216, 8, -4.0468216, -3.956894, 8, -4.3166103, 8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_neyu1"]
texture = ExtResource("8_1tsjo")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8h1ko"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2sxi3")
sources/1 = SubResource("TileSetAtlasSource_afyft")
sources/2 = SubResource("TileSetAtlasSource_4uu3l")
sources/3 = SubResource("TileSetAtlasSource_nssql")
sources/4 = SubResource("TileSetAtlasSource_y0ty6")
sources/5 = SubResource("TileSetAtlasSource_sc4v1")
sources/6 = SubResource("TileSetAtlasSource_1tsjo")
sources/7 = SubResource("TileSetAtlasSource_neyu1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_neyu1"]
size = Vector2(38.135483, 100.84747)

[sub_resource type="LabelSettings" id="LabelSettings_nssql"]
font = ExtResource("9_y0ty6")
font_size = 500

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc4v1"]
size = Vector2(6.141644, 20.617065)

[node name="House" type="Node2D"]
script = ExtResource("1_nssql")

[node name="Floor" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-626, -604)
scale = Vector2(7.2599993, 7.2599993)
tile_map_data = PackedByteArray("AAAKAAYABAAAAAAAAAAKAAcAAwAAAAAAAGAKAAgAAwAAAAAAAGAKAAkAAwAAAAAAAGALAAYAAwAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAAMAAYAAwAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAANAAYAAwAAAAAAAAANAAcAAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAAOAAYAAwAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAQAAYAAwAAAAAAAAAQAAcAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAPAAYAAwAAAAAAAAARAAcAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAASAAcAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAARAAYAAwAAAAAAAAASAAYAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_8h1ko")

[node name="Wall" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-626, -604)
scale = Vector2(7.2599993, 7.2599993)
tile_map_data = PackedByteArray("AAAKAAUABQAAAAAAAAAKAAIABQAAAAAAAAAKAAMABQAAAAAAAAAKAAQABQAAAAAAAAALAAIABQAAAAAAAAALAAMABQAAAAAAAAALAAQABQAAAAAAAAALAAUABQAAAAAAAAAMAAIABQAAAAAAAAAMAAMABQAAAAAAAAAMAAQABQAAAAAAAAAMAAUABQAAAAAAAAANAAIABQAAAAAAAAANAAMABQAAAAAAAAANAAQABQAAAAAAAAANAAUABQAAAAAAAAAOAAIABQAAAAAAAAAOAAMABQAAAAAAAAAOAAQABQAAAAAAAAAOAAUABQAAAAAAAAAPAAIABQAAAAAAAAAPAAMABQAAAAAAAAAPAAQABQAAAAAAAAAPAAUABQAAAAAAAAAQAAIABQAAAAAAAAAQAAMABQAAAAAAAAAQAAQABQAAAAAAAAAQAAUABQAAAAAAAAARAAIABQAAAAAAAAARAAMABQAAAAAAAAARAAQABQAAAAAAAAARAAUABQAAAAAAAAASAAIABQAAAAAAAAASAAMABQAAAAAAAAASAAQABQAAAAAAAAASAAUABQAAAAAAAAA=")
tile_set = SubResource("TileSet_8h1ko")

[node name="Border" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-626, -604)
scale = Vector2(7.2599993, 7.2599993)
tile_map_data = PackedByteArray("AAAKAAYABgAAAAAAAAAKAAgABgAAAAAAAAAKAAkABgAAAAEAAGAKAAUABgAAAAAAAAAKAAIABgAAAAEAAAAKAAMABgAAAAAAAAAKAAQABgAAAAAAAAALAAIABgAAAAAAAFALAAMABQAAAAAAAAALAAQABQAAAAAAAAALAAUABQAAAAAAAAAMAAIABgAAAAAAAFAMAAMABQAAAAAAAAAMAAQABQAAAAAAAAAMAAUABQAAAAAAAAANAAIABgAAAAAAAFANAAMABQAAAAAAAAANAAQABQAAAAAAAAANAAUABQAAAAAAAAAOAAIABgAAAAAAAFAOAAMABQAAAAAAAAAOAAQABQAAAAAAAAAOAAUABQAAAAAAAAAPAAIABgAAAAAAAFAPAAMABQAAAAAAAAAPAAQABQAAAAAAAAAPAAUABQAAAAAAAAAQAAIABgAAAAAAAFAQAAMABQAAAAAAAAAQAAQABQAAAAAAAAAQAAUABQAAAAAAAAARAAIABgAAAAAAAFARAAMABQAAAAAAAAARAAQABQAAAAAAAAARAAUABQAAAAAAAAASAAIABgAAAAEAAFASAAMABgAAAAAAADASAAQABgAAAAAAADASAAUABgAAAAAAADAKAAcABgAAAAAAAAASAAkABgAAAAEAADASAAYABgAAAAAAADASAAcABgAAAAAAADASAAgABgAAAAAAADARAAkABgAAAAAAAGAQAAkABgAAAAAAAGAPAAkABgAAAAAAAGAOAAkABgAAAAAAAGANAAkABgAAAAAAAGAMAAkABgAAAAAAAGALAAkABgAAAAAAAGA=")
tile_set = SubResource("TileSet_8h1ko")

[node name="Furniture" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-626, -604)
scale = Vector2(7.2599993, 7.2599993)
tile_map_data = PackedByteArray("AAAKAAYAAAAFAAEAAAAKAAcAAAAFAAIAAAALAAYAAAAGAAEAAAALAAcAAAAGAAIAAAAKAAUAAAAFAAAAAAALAAUAAAAGAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAGAAgAAAAQAAYAAAAEAAcAAAAQAAcAAAAEAAgAAAARAAYAAAAFAAcAAAARAAcAAAAFAAgAAAAOAAYAAAAHAAIAAAAPAAYAAAAIAAIAAAAOAAQAAAAHAAAAAAAOAAUAAAAHAAEAAAAPAAQAAAAIAAAAAAAPAAUAAAAIAAEAAAANAAcAAAAAAAUAAAANAAgAAAAAAAYAAAAOAAcAAAABAAUAAAAOAAgAAAABAAYAAAAPAAcAAAACAAUAAAAPAAgAAAACAAYAAAA=")
tile_set = SubResource("TileSet_8h1ko")

[node name="Furniture2" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(-626, -604)
scale = Vector2(7.2599993, 7.2599993)
tile_map_data = PackedByteArray("AAAKAAYAAAAFAAEAAAAKAAcAAAAFAAIAAAALAAYAAAAGAAEAAAALAAcAAAAGAAIAAAAKAAUAAAAFAAAAAAALAAUAAAAGAAAAAAAMAAUAAAAGAAcAAAAMAAYAAAAGAAgAAAAQAAYAAAACAAcAAAAQAAcAAAACAAgAAAARAAYAAAADAAcAAAARAAcAAAADAAgAAAALAAkABwAAAAAAAAA=")
tile_set = SubResource("TileSet_8h1ko")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_neyu1")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(777, 239)
scale = Vector2(1.18, 1.18)
script = ExtResource("4_1q7ox")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(-2.5423193, -1.6949127)
scale = Vector2(0.337, 0.337)
texture = ExtResource("5_tjhet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1.2712402, -2.1186218)
shape = SubResource("RectangleShape2D_neyu1")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="Dialog" type="CanvasLayer" parent="CharacterBody2D/Camera2D"]
layer = 2
script = ExtResource("6_1tsjo")

[node name="Dialog" type="TextureRect" parent="CharacterBody2D/Camera2D/Dialog"]
visible = false
texture_filter = 1
offset_left = 587.0
offset_top = 761.0
offset_right = 1343.0
offset_bottom = 1013.0
texture = ExtResource("7_neyu1")

[node name="Text" type="RichTextLabel" parent="CharacterBody2D/Camera2D/Dialog/Dialog"]
layout_mode = 0
offset_left = 263.0
offset_top = 45.0
offset_right = 9343.0
offset_bottom = 3317.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/normal_font = ExtResource("8_nssql")
theme_override_font_sizes/normal_font_size = 500
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
scroll_active = false
scroll_following_visible_characters = true

[node name="Name" type="Label" parent="CharacterBody2D/Camera2D/Dialog/Dialog"]
layout_mode = 0
offset_left = 100.0
offset_top = 8.0
offset_right = 2879.999
offset_bottom = 633.0
scale = Vector2(0.05, 0.05)
text = "Name"
label_settings = SubResource("LabelSettings_nssql")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CharacterBody2D/Camera2D/Dialog/Dialog"]
texture_filter = 1
layout_mode = 0
offset_left = 87.0
offset_top = 59.0
offset_right = 274.0
offset_bottom = 230.0
scale = Vector2(0.87857175, 0.87857175)
texture = ExtResource("10_sc4v1")
expand_mode = 1

[node name="Menu" type="TextureRect" parent="CharacterBody2D/Camera2D/Dialog"]
visible = false
texture_filter = 1
offset_left = 1352.0
offset_top = 743.0
offset_right = 1621.0
offset_bottom = 1028.0
texture = ExtResource("11_ct606")

[node name="Option_1" type="Button" parent="CharacterBody2D/Camera2D/Dialog/Menu"]
visible = false
layout_mode = 0
offset_left = 70.0
offset_top = 50.0
offset_right = 199.0
offset_bottom = 88.0

[node name="Option_2" type="Button" parent="CharacterBody2D/Camera2D/Dialog/Menu"]
visible = false
layout_mode = 0
offset_left = 70.0
offset_top = 92.0
offset_right = 199.0
offset_bottom = 130.0

[node name="Option_3" type="Button" parent="CharacterBody2D/Camera2D/Dialog/Menu"]
visible = false
layout_mode = 0
offset_left = 70.0
offset_top = 134.0
offset_right = 199.0
offset_bottom = 172.0

[node name="Option_4" type="Button" parent="CharacterBody2D/Camera2D/Dialog/Menu"]
visible = false
layout_mode = 0
offset_left = 70.0
offset_top = 176.0
offset_right = 199.0
offset_bottom = 214.0

[node name="Interact" type="CanvasLayer" parent="CharacterBody2D/Camera2D"]
visible = false
script = ExtResource("6_1tsjo")

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D/Interact"]
offset_left = 655.0
offset_top = 1011.0
offset_right = 1274.0
offset_bottom = 1071.0
theme_override_fonts/font = ExtResource("8_nssql")
theme_override_font_sizes/font_size = 50
text = "Press e to exit the house"

[node name="Night" type="CanvasLayer" parent="CharacterBody2D/Camera2D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D/Camera2D/Night"]
offset_left = -473.0
offset_top = -552.0
offset_right = 2328.0
offset_bottom = 1275.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(709, 479)
scale = Vector2(3.3600008, 1)
script = ExtResource("19_y0ty6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.14880371, -1.0752258)
scale = Vector2(5.669722, 3.484954)
shape = SubResource("RectangleShape2D_sc4v1")
